--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ const plans = [
     name: "Group Classes", tag: null, tagColor: null, price: "$119",
     subtext: "per month · Monthly subscription · Groups of 3",
     color: "#7C3AED", bg: "linear-gradient(135deg, #f5f3ff, #ede9fe)", border: "#a78bfa",
-    features: ["Live online group classes (3 students)","Fixed weekly schedule — classes run at the same time every week","Can be taken by any of our expert CS educators","If your child misses a class, the recording is available for 1 week","Teacher may vary across sessions","Access to KenSpark AI platform","Student profile & portfolio","Student showcase feature","Certificate after every module (~3 months)"],
+    features: ["Live online group classes (3 students)","Fixed weekly schedule — classes run at the same time every week","If your child misses a class, the recording is available for 1 week","Teacher may vary across sessions","Access to KenSpark AI platform","Student profile & portfolio","Student showcase feature","Certificate after every module (~3 months)"],
   },
   {
     name: "Private 1-on-1", tag: "Personalized", tagColor: "#0369a1", price: "$150",
