--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ const testimonials = [
 const stats = [
   { value: "7+", label: "Years of Excellence" },
   { value: "1000+", label: "Students Taught" },
-  { value: "5.0★", label: "Google & Facebook" },
+  { value: "5.0★", label: "Trustpilot,Google & Facebook" },
   { value: "K–12", label: "All Grade Levels" },
 ];
 
