Update message about child's first coding class

--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@ function App() {
           <div style={{ fontSize: 52, marginBottom: 16 }}>🚀</div>
           <h2 style={{ fontSize: "clamp(26px, 4.5vw, 42px)", fontWeight: 900, marginBottom: 14, lineHeight: 1.25 }}>Ready to Continue the Journey?</h2>
           <p style={{ color: "rgba(255,255,255,0.72)", fontSize: 16, marginBottom: 36, lineHeight: 1.75 }}>
-            Your child just had their first taste of coding. Let's build on that excitement — enroll today and watch them grow into a confident creator.
+            Your child just had the first coding class with us. Let's build on that excitement — enroll today and watch them grow into a confident creator.
           </p>
          
           <div style={{ marginTop: 28, display: "flex", gap: 28, justifyContent: "center", flexWrap: "wrap", color: "rgba(255,255,255,0.5)", fontSize: 13 }}>
